k8s/sercure-ingress/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-v2-secure
spec:
  selector:
    matchLabels:
      app: echoserver-v2-secure
  replicas: 1
  template:
    metadata:
      labels:
        app: echoserver-v2-secure
    spec:
      containers:
      - name: echoserver-v2-secure
        image: k8s.gcr.io/e2e-test-images/echoserver:2.5
        ports:
        - containerPort: 8080
