k8s/sercure-ingress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: echoserver-v2-secure
spec:
  selector:
    app: echoserver-v2-secure
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
